# dictionary_learning

./: .gitignore  README.md  TODO.md  __init__.py  benchmark.py  buffer.py  cfg.yaml  dictionary.py  evaluation.py  find_top_connections.py  finetune.py  gptneo.py  importance_scores.py  install.sh  mask_ft.py  minimal_parallel.py  minimal_parallel.sh  pile.sh  pyproject.toml  requirements.txt  run_finetuning.py  run_finetuning_mse.py  run_finetuning_pythia.py  run_pretraining.py  run_training.py  scratch.ipynb  scratch.py  test.py  train.sh  training.py  utils.py
dictionary_learning/: __init__.py  buffer.py  gpt_neo.py  gpt_neox.py  mask_scae.py  mask_trainer.py  old_train.py  run_finetuning.py  scae.py  scae_old.py  top_k.py  trainer.py  training.py  utils.py
interp/: interp_utils.py  interpret_scae.ipynb  interpret_scaes.ipynb
notebooks/: importance_scores.py  model_loss.ipynb  scae_evaluation.ipynb  scae_evalutation.ipynb  scae_training.ipynb  scratch.ipynb  scratch.py  test_importance_scores.py  trace.json
trainers/: __init__.py  batch_top_k.py  gated_anneal.py  gdm.py  jumprelu.py  p_anneal.py  scae.py  scratch.ipynb  standard.py  top_k.py
